Load fonts over https

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="rabbit.js"></script>
 	<link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href='http://mmwebfonts.comquas.com/fonts/?font=mon3' />
-    <link rel="stylesheet" href='http://mmwebfonts.comquas.com/fonts/?font=zawgyi' />
+    <link rel="stylesheet" href='https://mmwebfonts.comquas.com/fonts/?font=mon3' />
+    <link rel="stylesheet" href='https://mmwebfonts.comquas.com/fonts/?font=zawgyi' />
     <script type="text/javascript">
       function clearText() {
         document.getElementById("unicode").value = "";
@@ -40,9 +40,9 @@
         <input type="button" value="Clear Text" onclick="clearText()">
     </section>
   </div>
-	<footer>
-		Found a bug ? Please , open <a href="https://github.com/Rabbit-Converter/Rabbit/issues/new">new issue</a>.
-	</footer>
+<!-- 	<footer>
+		Found a bug ? Please, open <a href="https://github.com/Rabbit-Converter/Rabbit/issues/new">new issue</a>.
+	</footer> -->
 </div>
 
 <script>
